An upvote button has been added to the article page.

--- a/my-blog/src/App.css
+++ b/my-blog/src/App.css
@@ -97,7 +97,7 @@ input, textarea {
   width: 320px;
 }
 
-#upvotes-section button, p {
+#upvote-section button, p {
   display: inline-block;
   margin-right: 16px;
 }
